tests/ui/derives/derives-span-Debug-enum-struct-variant.stderr
error[E0277]: `Error` doesn't implement `Debug`
  --> $DIR/derives-span-Debug-enum-struct-variant.rs:9:6
   |
LL | #[derive(Debug)]
   |          ----- in this derive macro expansion
...
LL |      x: Error
   |      ^^^^^^^^ the trait `Debug` is not implemented for `Error`
   |
   = note: add `#[derive(Debug)]` to `Error` or manually `impl Debug for Error`
help: consider annotating `Error` with `#[derive(Debug)]`
   |
LL + #[derive(Debug)]
LL | struct Error;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
